Not sure what this was

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width"><!--,maximum-scale=1">-->
       <meta name="rating" content="general">
       <meta name="description" content="New SmileBASIC Source">
+      <!-- LOC:METAEND -->
       <link data-favicon rel="shortcut icon" href="favicon.ico">
 <script>
 //DO THIS NOW! Well... maybe the order doesn't matter... oh well
