Moved routing into separate file, keep things together

--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1617944724" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1617944724"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1617944724"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1617959107" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1617959107"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1617959107"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1617944724"></script>
-      <script src="templates.js?v=1617944724"></script>
-      <script src="dom.js?v=1617944724"></script>
-      <script src="api.js?v=1617944724"></script>
-      <script src="commands.js?v=1617944724"></script>
-      <script src="index.js?v=1617944724"></script>
-      <script src="sbs2-markup/highlight.js?v=1617944724"></script>
-      <script src="sbs2-markup/parse.js?v=1617944724"></script>
-      <script src="sbs2-markup/render.js?v=1617944724"></script>
+      <script src="libbo.js?v=1617959107"></script>
+      <script src="templates.js?v=1617959107"></script>
+      <script src="dom.js?v=1617959107"></script>
+      <script src="api.js?v=1617959107"></script>
+      <script src="commands.js?v=1617959107"></script>
+      <script src="index.js?v=1617959107"></script>
+      <script src="routing.js?v=1617959107"></script>
+      <script src="sbs2-markup/highlight.js?v=1617959107"></script>
+      <script src="sbs2-markup/parse.js?v=1617959107"></script>
+      <script src="sbs2-markup/render.js?v=1617959107"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1617944724" />
+      <link rel="stylesheet" href="index.css?v=1617959107" />
       <script>
 function loginEmailSwitch(element)
 {
